1.hover effect of buttons can be triggered by clicking on mobile device  2.fix W3C css error

--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ h1, h2 {
   box-shadow: 0px 6px 10px 3px rgba(0, 0, 0, 0.15);
   transition: all 0.3s;
 }
-.button__round:hover {
+.button__round:hover, .button__round:active {
   opacity: 80%;
   box-shadow: 0px 6px 10px 3px rgba(0, 0, 0, 0.3);
   transform: scale(1.05);
@@ -67,7 +67,7 @@ h1, h2 {
   opacity: 0;
   transition: 300ms;
 }
-.button__like .fa-solid:hover {
+.button__like .fa-solid:hover, .button__like .fa-solid:active {
   opacity: 1;
 }
 @keyframes slideUp {
@@ -338,7 +338,7 @@ h1, h2 {
   width: 20%;
 }
 .menuBox:hover > .selected i {
-  rotate: 1turn;
+  transform: rotate(1turn);
 }
 .menuBox .description {
   margin: auto 0px auto 13px;
