--- a/scss/components/_blocks.scss
+++ b/scss/components/_blocks.scss
@@ -417,7 +417,7 @@
     &:hover >.selected{
         width:20%;
         i{
-            rotate: 1turn;
+            transform: rotate(1turn);
         }
     }
 
