--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -18,7 +18,7 @@
         -webkit-transition: all 0.3s;
         -o-transition: all 0.3s;
         transition: all 0.3s;
-        &:hover{
+        &:hover, &:active{
             opacity: 80%;;
             -webkit-box-shadow: 0px 6px 10px 3px rgba(0, 0, 0, 0.3);;
                     box-shadow: 0px 6px 10px 3px rgba(0, 0, 0, 0.3);
@@ -34,6 +34,7 @@
             max-width: 320px;
             padding: 2.5%;
         }
+
 
     }
     &__like{
@@ -53,7 +54,7 @@
             -webkit-transition: 300ms;
             -o-transition: 300ms;
             transition: 300ms;
-            &:hover{
+            &:hover, &:active{
                 opacity: 1;
             }
         }
